feat: reiniciando o sorteio

--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
 
             <div class="button-container">
                 <button class="button-draw" onclick="sortearAmigo()" aria-label="Sortear amigo secreto">
-                    <img src="assets/play_circle_outline.png" alt="Ícone para sortear">
+                    <img src="assets/play_circle_35dp_FFFFFF_FILL0_wght400_GRAD0_opsz40.png" alt="Ícone para sortear">
                     Sortear amigo
+                </button>
+                <button class="button-draw" onclick="reiniciarSorteio()" aria-label="Reiniciar sorteio">
+                    <img src="assets/refresh_35dp_FFFFFF_FILL0_wght400_GRAD0_opsz40.png" alt="Ícone para reiniciar">
+                    Reiniciar Sorteio
                 </button>
             </div>
         </section>
